--- a/Android/app108adult/app/src/main/res/layout/activity_record.xml
+++ b/Android/app108adult/app/src/main/res/layout/activity_record.xml
@@ -31,14 +31,17 @@
                     android:layout_weight="0.7"
                     android:layout_height="fill_parent">
                     <ListView android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/border"
+                        android:scrollbarAlwaysDrawVerticalTrack="true"
                         android:id="@+id/hist_lvItems"
+                        android:fadeScrollbars="false"
                         android:scrollbarStyle="outsideInset"
                         android:scrollbarDefaultDelayBeforeFade="50000"
                         android:scrollbarThumbVertical="@drawable/hist_scroll_thumb"
                         android:scrollbarTrackVertical="@drawable/hist_scroll_track"
                         android:cacheColorHint="#00000000"
-                        android:dividerHeight="0px"
+                        android:dividerHeight="1px"
                         android:listSelector="#00000000"
+                        android:padding="1dp"
                         ></ListView>
                 </RelativeLayout>
 
