--- a/Android/app108adult/app/src/main/res/layout/cell_folding_history.xml
+++ b/Android/app108adult/app/src/main/res/layout/cell_folding_history.xml
@@ -5,13 +5,22 @@
     android:gravity="center"
     android:orientation="vertical" >
     
-    <LinearLayout style="@style/wrap_content" android:orientation="horizontal" android:layout_marginTop="12dp" >
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="12dp" >
         <TextView android:layout_width="300dp" android:layout_height="wrap_content" android:id="@+id/cellFoldingCount_tvDate" android:text="2012-02-11"
-            android:textSize="23sp" android:textColor="#aa000000" android:textStyle="bold"/>
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cellFoldingCount_tvCount" android:text="3"
-            android:textSize="23sp" android:textColor="#aa000000" />
-    </LinearLayout>
-    
-    <ImageView style="@style/wrap_content" android:background="@drawable/hist_item_line" android:layout_marginTop="12dp" android:layout_marginLeft="14dp"/>
+            android:textSize="23sp" android:textColor="#aa000000" android:textStyle="bold" android:layout_alignParentLeft="true" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:orientation="horizontal" android:layout_alignParentRight="true">
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cellFoldingCount_tvCount" android:text="3"
+                android:textSize="23sp" android:textColor="#aa000000"  />
+            <exight.customviews.EffectButton
+                android:id="@+id/record_bt_cell"
+                style="@style/help_common_btn"
+                android:text="이어하기" android:layout_marginLeft="12dp" />
+        </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
