--- a/Android/app108adult/app/src/main/res/layout/activity_record.xml
+++ b/Android/app108adult/app/src/main/res/layout/activity_record.xml
@@ -29,15 +29,16 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_weight="0.7"
-                    android:layout_height="fill_parent">
+                    android:layout_height="fill_parent"
+                    android:paddingRight="20dp">
                     <ListView android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/border"
                         android:scrollbarAlwaysDrawVerticalTrack="true"
                         android:id="@+id/hist_lvItems"
                         android:fadeScrollbars="false"
                         android:scrollbarStyle="outsideInset"
                         android:scrollbarDefaultDelayBeforeFade="50000"
-                        android:scrollbarThumbVertical="@drawable/hist_scroll_thumb"
-                        android:scrollbarTrackVertical="@drawable/hist_scroll_track"
+                        android:scrollbarThumbVertical="@drawable/scrollbar"
+                        android:scrollbarTrackVertical="@drawable/border"
                         android:cacheColorHint="#00000000"
                         android:dividerHeight="1px"
                         android:listSelector="#00000000"
