--- a/Android/app108adult/app/src/main/res/layout/activity_record.xml
+++ b/Android/app108adult/app/src/main/res/layout/activity_record.xml
@@ -40,7 +40,7 @@
                         android:scrollbarThumbVertical="@drawable/scrollbar"
                         android:scrollbarTrackVertical="@drawable/border"
                         android:cacheColorHint="#00000000"
-                        android:dividerHeight="1px"
+                        android:dividerHeight="1dp"
                         android:listSelector="#00000000"
                         android:padding="1dp"
                         ></ListView>
