--- a/iOS/old108/SettingPage.xib
+++ b/iOS/old108/SettingPage.xib
@@ -375,6 +375,7 @@
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
+                                        <action selector="clickDeleteRecord:" destination="-1" eventType="touchUpInside" id="pnX-Wm-EQ3"/>
                                         <action selector="clickVoiceType:" destination="-1" eventType="touchUpInside" id="TYL-W2-gcM"/>
                                     </connections>
                                 </button>
