--- a/iOS/old108/HelpPage.xib
+++ b/iOS/old108/HelpPage.xib
@@ -21,9 +21,11 @@
                 <outlet property="buttonPlay" destination="33" id="40"/>
                 <outlet property="buttonPrevImage" destination="35" id="39"/>
                 <outlet property="buttonUsage" destination="PcR-La-fmj" id="Hie-MA-brm"/>
-                <outlet property="help1" destination="5" id="u7m-pg-5wp"/>
-                <outlet property="help2" destination="48" id="u6y-N3-rjh"/>
-                <outlet property="help3" destination="49" id="5VY-Hl-jTd"/>
+                <outlet property="help1" destination="5" id="jK6-MR-Jui"/>
+                <outlet property="help2" destination="vTJ-Xd-tqZ" id="NuU-AY-yTi"/>
+                <outlet property="help3" destination="VXh-Bt-Ts9" id="oKF-XU-fRM"/>
+                <outlet property="help4" destination="48" id="bEh-yN-z8h"/>
+                <outlet property="help5" destination="49" id="kPu-HB-3bs"/>
                 <outlet property="howbt1" destination="35" id="Xss-vK-fRh"/>
                 <outlet property="howbt2" destination="33" id="Bxb-6D-Fhe"/>
                 <outlet property="howbt3" destination="37" id="nc0-cI-3Yj"/>
@@ -34,6 +36,8 @@
                 <outlet property="textViewAppInfo" destination="WyG-g0-DXc" id="UGs-23-imr"/>
                 <outlet property="textViewHowToPlay" destination="ZgU-s6-DYR" id="Aiu-zN-9YN"/>
                 <outlet property="textViewPlayInfo" destination="ZgU-s6-DYR" id="KKl-pD-Zuk"/>
+                <outlet property="usageNextButton" destination="om3-bH-JE7" id="x4D-qU-vYk"/>
+                <outlet property="usagePrevButton" destination="wWn-bx-oFN" id="WHf-8k-uXP"/>
                 <outlet property="view" destination="1" id="3"/>
                 <outlet property="viewAppInfo" destination="9" id="20"/>
                 <outlet property="viewHowToPlay" destination="7" id="21"/>
@@ -573,17 +577,27 @@ Cg
                             <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="helpContent1.png" id="5">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="help1.png" id="5">
                                     <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <animations/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="helpContent2.png" id="48">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="help2.png" id="vTJ-Xd-tqZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <animations/>
+                                </imageView>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="help3.png" id="VXh-Bt-Ts9">
+                                    <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <animations/>
+                                </imageView>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="help4.png" id="48">
                                     <rect key="frame" x="480" y="0.0" width="480" height="320"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <animations/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="helpContent3.png" id="49">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="help5.png" id="49">
                                     <rect key="frame" x="960" y="0.0" width="480" height="320"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <animations/>
@@ -594,11 +608,29 @@ Cg
                                 <outlet property="delegate" destination="-1" id="53"/>
                             </connections>
                         </scrollView>
-                        <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="50">
+                        <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" id="50">
                             <rect key="frame" x="221" y="284" width="38" height="36"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
                         </pageControl>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="wWn-bx-oFN">
+                            <rect key="frame" x="50" y="10" width="30" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <animations/>
+                            <state key="normal" title="Button" image="prev.png"/>
+                            <connections>
+                                <action selector="clickUsagePrev:" destination="-1" eventType="touchUpInside" id="ABy-wu-mFU"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="om3-bH-JE7">
+                            <rect key="frame" x="50" y="10" width="30" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <animations/>
+                            <state key="normal" title="Button" image="next.png"/>
+                            <connections>
+                                <action selector="clickUsageNext:" destination="-1" eventType="touchUpInside" id="ZEJ-OC-IlI"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <animations/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -613,11 +645,12 @@ Cg
                             <animations/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="35">
-                            <rect key="frame" x="42" y="223" width="33" height="30"/>
+                            <rect key="frame" x="-104" y="88" width="22" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
+                            <color key="backgroundColor" red="0.23137254900000001" green="0.23137254900000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
-                            <state key="normal" backgroundImage="prevButton.png">
+                            <state key="normal" image="prev.png">
                                 <color key="titleColor" red="0.23137254900000001" green="0.23137254900000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -626,11 +659,12 @@ Cg
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="33">
-                            <rect key="frame" x="125" y="223" width="33" height="30"/>
+                            <rect key="frame" x="-21" y="88" width="22" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
+                            <color key="backgroundColor" red="0.23137254900000001" green="0.23137254900000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
-                            <state key="normal" backgroundImage="playButton.png">
+                            <state key="normal" image="play.png">
                                 <color key="titleColor" red="0.23137254900000001" green="0.23137254900000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -639,11 +673,12 @@ Cg
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="37">
-                            <rect key="frame" x="223" y="223" width="33" height="30"/>
+                            <rect key="frame" x="77" y="88" width="22" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
+                            <color key="backgroundColor" red="0.23137254900000001" green="0.23137254900000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
-                            <state key="normal" backgroundImage="nextButton.png">
+                            <state key="normal" image="next.png">
                                 <color key="titleColor" red="0.23137254900000001" green="0.23137254900000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -651,14 +686,12 @@ Cg
                                 <action selector="clickNext:" destination="-1" eventType="touchUpInside" id="44"/>
                             </connections>
                         </button>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" id="ZgU-s6-DYR">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" indicatorStyle="black" editable="NO" usesAttributedText="YES" selectable="NO" id="ZgU-s6-DYR">
                             <rect key="frame" x="120" y="96" width="240" height="128"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
-                            <color key="backgroundColor" red="0.99255222082138062" green="0.99612540006637573" blue="0.99599212408065796" alpha="0.2038376266891892" colorSpace="custom" customColorSpace="sRGB"/>
-                            <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
-                            <color key="textColor" red="0.23137254900000001" green="0.23137254900000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="backgroundColor" red="0.99255222082138062" green="0.99612540006637573" blue="0.99599212408065796" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                            <attributedString key="attributedText"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                     </subviews>
@@ -721,12 +754,14 @@ Cg
         </view>
     </objects>
     <resources>
-        <image name="helpContent1.png" width="960" height="640"/>
-        <image name="helpContent2.png" width="960" height="640"/>
-        <image name="helpContent3.png" width="960" height="640"/>
+        <image name="help1.png" width="1328" height="749"/>
+        <image name="help2.png" width="1328" height="749"/>
+        <image name="help3.png" width="1328" height="749"/>
+        <image name="help4.png" width="1328" height="749"/>
+        <image name="help5.png" width="1328" height="749"/>
         <image name="helpPageBg.png" width="960" height="640"/>
-        <image name="nextButton.png" width="66" height="60"/>
-        <image name="playButton.png" width="66" height="60"/>
-        <image name="prevButton.png" width="66" height="60"/>
+        <image name="next.png" width="326" height="300"/>
+        <image name="play.png" width="326" height="300"/>
+        <image name="prev.png" width="326" height="300"/>
     </resources>
 </document>
