--- a/iOS/old108/HelpPage.xib
+++ b/iOS/old108/HelpPage.xib
@@ -49,7 +49,7 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="helpPageBg.png" id="4">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="recordPageBg.png" id="4">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <animations/>
@@ -759,9 +759,9 @@ Cg
         <image name="help3.png" width="1328" height="749"/>
         <image name="help4.png" width="1328" height="749"/>
         <image name="help5.png" width="1328" height="749"/>
-        <image name="helpPageBg.png" width="960" height="640"/>
         <image name="next.png" width="326" height="300"/>
         <image name="play.png" width="326" height="300"/>
         <image name="prev.png" width="326" height="300"/>
+        <image name="recordPageBg.png" width="960" height="640"/>
     </resources>
 </document>
