--- a/iOS/old108/PlayPage.xib
+++ b/iOS/old108/PlayPage.xib
@@ -93,7 +93,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="closePopUpBg.png" id="24">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="recordPageBg.png" id="24">
                             <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
@@ -141,8 +141,8 @@
         </view>
     </objects>
     <resources>
-        <image name="closePopUpBg.png" width="960" height="640"/>
         <image name="playDelayBg.png" width="960" height="640"/>
         <image name="playingBg.png" width="960" height="640"/>
+        <image name="recordPageBg.png" width="960" height="640"/>
     </resources>
 </document>
