--- a/iOS/old108/SettingPage.xib
+++ b/iOS/old108/SettingPage.xib
@@ -59,7 +59,7 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="settingPageBg.png" id="4">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="recordPageBg.png" id="4">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <animations/>
@@ -401,7 +401,7 @@
         <image name="bird.png" width="900" height="300"/>
         <image name="bug.png" width="900" height="300"/>
         <image name="note.png" width="900" height="300"/>
-        <image name="settingPageBg.png" width="960" height="640"/>
+        <image name="recordPageBg.png" width="960" height="640"/>
         <image name="water.png" width="900" height="300"/>
     </resources>
 </document>
