--- a/Android/app108adult/app/src/main/res/layout/tabitem_mirror.xml
+++ b/Android/app108adult/app/src/main/res/layout/tabitem_mirror.xml
@@ -28,9 +28,17 @@
                     android:layout_width="0dp"
                     android:layout_weight="0.7"
                     android:layout_height="fill_parent">
-                    <ImageView
-                        android:layout_width="match_parent" android:background="#00000000"
-                        android:layout_height="match_parent" android:scaleType="fitCenter" android:src="@drawable/help_miror"/>
+                    <TextView
+                        android:id="@+id/tabItemMirror_text"
+                        style="@style/match_parent"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        android:gravity="center"
+                        android:maxWidth="230dp"
+                        android:text="마음을 차분하게 가라앉히고sdfsdf"
+                        android:textColor="#000000"
+                        android:padding="20dp"
+                        android:textSize="16sp"
+                        />
                 </RelativeLayout>
 
                 <RelativeLayout
